--- a/Index.html
+++ b/Index.html
@@ -37,15 +37,15 @@
                 <div class="dropdown">
                     <a class="joiasbtn">Camisas</a>
                     <div class="dropdown-content">
-                      <a href="#">Brasil</a>
-                      <a href="#">Europa</a>
-                      <a href="#">Retrô</a>
-                      <a href="#">Seleção</a>
+                      <a href="CamisaCorinthians.html">Brasil</a>
+                      <a href="TelaProduto.html">Europa</a>
+                      <a href="CamisaBarcelona.html">Retrô</a>
+                      <a href="CamisaBrasil.html">Seleção</a>
                     </div>
                   </div>
             </li>
-            <li><a href="sobre nós">Sobre Nós</a></li>
-            <li><a href="contato">Contato</a></li>
+            <li><a href="SobreNós.html">Sobre Nós</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
         <div class="search-login">
             <input type="text" placeholder="Pesquisar..." class="search-bar">
@@ -118,22 +118,27 @@
             <div class="gallery-item"><img src="Corinthians 24_25 (1).jpeg" alt="Imagem 5"></div>
             <div class="gallery-item"><img src="Corinthians 24_25.jpeg" alt="Imagem 6"></div>
         </div>
+        <div class="video-container">
+            <iframe src="videoplayback (1).mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </section>
 
     <!-- Footer Completo -->
     <footer>
         <div class="footer-content">
-            <div class="footer-section about">
+            <div class="footer-section" id="contato"> <!-- ID de ancoragem -->
                 <h2>Sobre Nós</h2>
                 <p>Informações sobre a empresa, sua história e missão.</p>
             </div>
             <div class="footer-section links">
                 <h2>Links Rápidos</h2>
                 <ul>
+                    <li><a href="https://www.instagram.com/">instagram</a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Produtos</a></li>
                     <li><a href="#">Contato</a></li>
+                    
                 </ul>
             </div>
             <div class="footer-section contact">
